--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 	grid-column: 1/3;
 	grid-row: 2/3;
 	min-height: 25rem;
-	background-image: url('/assets/images/image-web-3-desktop.jpg');
+	background-image: url('./assets/images/image-web-3-desktop.jpg');
 	background-size: cover;
 	background-position: center;
 }
